# semestral_project_I

./: README.md  app.py  create_patients.py  patient.py  patients.csv  pyproject.toml
assets/: app.css  base.css
