[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["pulcovamon <pulcovamon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dash = "^2.14.2"
pandas = "^2.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
